# saas_demo

./: .gitignore  pyproject.toml
demo_app/demo_app/: conduit_api.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
demo_app/demo_app/templates/components/: base.html  sidebar.html
demo_app/demo_app/templates/views/: dashboard-view.html  dashboards.html  error.html  signin.html  workspace_create.html  workspaces.html
demo_server/: server.py
