[tool.poetry]
name = "saas-demo-dashboards"
version = "0.1.0"
description = ""
authors = ["dmitrii-sorokin-cndt <dmitrii@getconduit.app>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
